WIP - placing login and load of setup to avoid flickering

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -164,8 +164,8 @@ h1.title {
 .loading {
   text-align: center;
   padding: 4em 0;
-  
+
   img {
-    width: 40%;
+    width: 50%;
   }
 }
